# password-manager

./: .gitattributes  .gitignore  AGENTS.md  ELI5.md  LEARNINGS.md  LICENSE  README.md  ROADMAP.md  SPEC.md  pyproject.toml
src/pwm/: __init__.py  __main__.py  cli.py  clipboard.py  crypto.py  generator.py  models.py  vault.py
tests/: test_cli.py  test_crypto.py  test_generator.py  test_vault.py
