[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pwm"
version = "0.1.0"
description = "Local-first educational password manager (CLI). Single encrypted vault using Argon2id + AES-GCM."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Password Manager Learning Project"}
]
keywords = ["password", "cli", "security", "vault", "education"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Utilities",
]

dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "cryptography>=42.0.0",
  "argon2-cffi>=23.1.0",
  "pyperclip>=1.8.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
pwm = "pwm.cli:app"

[project.urls]
"Source" = "https://github.com/example/pwm"  # placeholder until real remote

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pwm = ["py.typed"]  # for type checkers later if we add

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter
